Some Responce CSS done, on Hover on NavButtons, Testing Animations - ToDo = On Hover Animations on Social buttons, Response Small to Med Devices

--- a/src/SassFiles/body.scss
+++ b/src/SassFiles/body.scss
@@ -3,75 +3,116 @@ $color2: #00a8d6;
 $color3: #e2feff;
 $color4: #fcfcd4;
 
-$picsize: 50px;
-$maxWidth: 1050px;
-$maxHeight: 1050px;
+$minWidth: 290px;
+$maxWidth: 500px;
+$maxHeight: 740px;
+
 
 // This file serves as the styling for many different Body Components located in the
 // src/LayoutComponents/BodyComponents Folder.
 
 // Default values for all Body Components.
 
+body {
+  //background: linear-gradient(-45deg, #327c97, #23a6d5, #4cd7f4, #abd8e9);
+  background-color: $color2;
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  height: 100%;
+  width: 80%;
+  max-width: $maxWidth;
+  max-height: $maxHeight;
+
+  margin-trim: 100%;
+  h1 {
+    font-size: 15px;
+    color: #fcfcd4;
+  }
+  p {
+    color: #fcfcd4;
+  }
+}
+
 .MainBody {
-  padding-left: 15%;
+  padding-left: 17%;
   padding-bottom: 0%;
-  top: 100px;
+  top: 15%;
   position: absolute;
   float: right;
-  width: $maxWidth;
   z-index: -1;
-  max-width: 1050px;
   width: 100%;
-  list-style-type: none;
-}
-
-// AboutMe Body Section. AboutMeBody.js Component
-.ListTestingGallery {
-  list-style-type: none;
-}
-.ListTestingDivider {
-  background: rgba(255, 255, 255, 0.47);
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(5.1px);
-  border-radius: 15px;
-  -webkit-backdrop-filter: blur(5.1px);
-}
-.aboutMePic {
-  list-style-type: none;
-  height: 650px;
-  width: 500px;
-  margin: 0;
-  padding: 0;
-}
-.aboutMeText {
-  color: $color2;
-  font-size: 130%;
-  list-style-type: none;
   height: 100%;
-  width: 100%;
-  margin: 10;
+  list-style-type: none;
 }
 
-#ListTestingGallery {
-  display: inline-flex;
+// Home Body Section. HomeBody.js Component.
+#MainBody-Home {
+  width: 80%;
+  height: 3000px;
+  h1{
+    padding-left: 10%;
+  }
+}
+// AboutMe Body Section. AboutMeBody.js Component
+#MainBody-AboutMe {
+  height: 100%;
+  width: 90%;
+  h1{
+    padding-left: 5%;
+  }
+  
+  .ListTestingGallery {
+    list-style-type: none;
+
+    display: block;
+  }
+  .ListTestingDivider {
+    background: rgba(255, 255, 255, 0.3);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5.1px);
+    border-radius: 15px;
+    -webkit-backdrop-filter: blur(5.1px);
+    height: 100%;
+    width: 100%;
+  }
+  .aboutMePic {
+    list-style-type: none;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+  }
+  .aboutMeText {
+    list-style-type: none;
+    color: $color4;
+    font-size: 50%;
+    height: 100%;
+    width: 50%;
+    line-height: 0.1px;
+  }
 }
 
 // Games Body Section - GamesBody.js Component.
 
 .GameBodyMainContainer {
-  width: 1000px;
+  width: 90%;
+  height: 100%;
   display: block;
+  h1{
+    padding-left: 5%;
+  }
 
   // Scrolling Elements.
   #GameBodyClass-containerElement {
     position: relative;
-    height: $maxHeight;
-    width: 900px;
+
+    width: 100%;
+    height: 100%;
     overflow: scroll;
 
     .GameBodyUL {
-      width: 1000;
-      height: 200px;
+      width: 100%;
+      height: 100%;
       list-style-type: none;
 
       padding-bottom: 5%;
@@ -79,51 +120,57 @@ $maxHeight: 1050px;
       display: inline-flex;
 
       .GameBodyLI {
-        width: 100px;
-        padding-left: 10%;
-        padding-right: 20%;
+        height: 100%;
+        width: 100%;
+        padding-top: 1%;
+        padding-bottom: 1%;
+        padding-left: 1%;
+        padding-right: 1%;
       }
     }
     // GameDisplayBlock.js Components located in the Component Folder.
     .GameDisplayBlockMainContainer {
       list-style-type: none;
       position: relative;
-      height: 200px;
-      width: 200px;
-      margin-top: 10%;
+      height: 100%;
+      width: 80%;
+      border: 0%;
 
-      background: rgba(255, 255, 255, 0.47);
+      padding-top: 10%;
+      padding-bottom: 10%;
+      padding-left: 2%;
+      padding-right: 2%;
+
+      background: rgba(255, 255, 255, 0.3);
       box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
       backdrop-filter: blur(5.1px);
       border-radius: 15px;
       -webkit-backdrop-filter: blur(5.1px);
 
       .GameDisplayBlockImage {
-        height: 100px;
-        width: 100px;
-        padding-left: 25%;
+        height: 70%;
+        width: 100%;
       }
 
       .GameDisplayBlockTitle {
-        font-size: 20px;
-        padding-left: 10%;
+        font-size: 5%;
+        padding-left: 5%;
       }
       .GameDisplayBlockDescription {
-        font-size: 10px;
-        padding-left: 10%;
+        font-size: 5%;
+        padding-left: 5%;
       }
       .GameDisplayBlockButton {
         background-color: $color3;
-        font-size: 15px;
+        font-size: 5%;
         text-align: center;
         color: black;
         border-color: #00a8d6;
         border-radius: 20%;
 
-        height: 30px;
-        width: 100px;
+        height: 100%;
+        width: 100%;
         margin: auto;
-        margin-left: 20%;
 
         text-align: center;
         float: top;
@@ -137,129 +184,174 @@ $maxHeight: 1050px;
 // Photos Body Section - PhotosBody.js component.
 #MainBody-Photos {
   display: inline-block;
+  height:$maxHeight;
+  width: $maxWidth;
+  margin: 0%;
+  height: 100%;
+  width: 100%;
 
+  h1 {
+    font-size: 60%;
+    padding-left:5%;
+  }
+
+  // Page Scroll Element.
   #PhotoBodyClass-containerElement {
     position: relative;
-    height: $maxHeight;
-    width: $maxWidth;
+    height:100%;
+    width:80%;
     overflow: scroll;
+    padding-left: 0%;
+    margin:0px;
   }
+  #PhotoBodyCarouselContainerScrollElement{
+    height:20%;
+    width:90%;
+    padding-left:5%;
+  }
+
+  // Carousel Component - Top of PhotoBody.js
   #PhotoBodyCarouselContainer {
-    //Needs work
-    margin-bottom: 100px;
+    margin-bottom: 100%;
+    width:100%;
+    height:100%;
   }
 
   .PhotoBodyCarouselPicture {
-    height: 500px;
-    width: 1000px;
-    background: rgba(255, 255, 255, 0.47);
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(5.1px);
-    border-radius: 30%;
-    -webkit-backdrop-filter: blur(5.1px);
+    height: 60%;
+    width: 80%;
+  }
+  .ScrollElementDiv{
+    padding-left:10%;
+    width:100%;
   }
 
+  // Start of Photo Object List.
   .PhotoUL {
     list-style-type: none;
-    display: flex;
+    height: 80%;
+    width: 100%;
+    margin-right:0%;
+    padding-top: 2%;
 
-    .PhotoPic {
-      height: 200px;
-      width: 200px;
+
+    .PhotoLI{
+      width:120%;
+      position:relative;
+      
     }
   }
 
+// PhotoDisplayBlock.js component - Child Component of PhotosBody.js - Located in Components Folder.
   .DisplayBlockMainContainer {
-    display: flex;
-    padding-bottom: 5%;
+    height: 100%;
+    width: 60%;
+    position:relative;
 
-    // PhotoDisplayBlock.js component - Child Component of PhotosBody.js - Located in Components Folder.
+    
     .DisplayBlockChildContainer {
-      background: rgba(255, 255, 255, 0.47);
+      background: rgba(255, 255, 255, 0.3);
       box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
       backdrop-filter: blur(5.1px);
       border-radius: 20%;
       -webkit-backdrop-filter: blur(5.1px);
+      height: 80%;
+      width: 45%;
+      display:inline-block;
+      margin-inline: 2%;
 
       .DisplayBlockTitle {
         color: #fcfcd4;
-        font-size: 50px;
+        font-size: 100%;
         text-align: center;
       }
       .DisplayBlockImage {
-        padding-right: 50px;
-        padding-left: 50px;
-        height: 250px;
-        width: 400px;
+        padding-right: 10%;
+        padding-left: 10%;
+        height: 60%;
+        width: 80%;
       }
       .DisplayBlockButton {
         background-color: $color3;
-        font-size: 15px;
-        text-align: center;
+        font-size: 55%;
         color: black;
         border-color: #00a8d6;
         border-radius: 20%;
 
-        height: 30px;
-        width: 100px;
+        height: 20%;
+        width: 50%;
         display: grid;
         margin: auto;
-
-        text-align: center;
       }
     }
   }
 }
 
 // TDModels Body Section - TDModelsBody.js Component.
-
-#ModelBodyClass-containerElement {
-  position: relative;
+#MainBody-3DModels {
   height: $maxHeight;
-  width: $maxWidth;
-  overflow: scroll;
+  width: 80%;
 
-  display: inline-block;
+  #ModelBodyClass-containerElement {
+    h1 {
+      padding-left: 8%;
+    }
 
-  // ModelDisplayBlock.js component - Child Component of TDModelsBody.js - Located in Components Folder.
-  .ModelDisplayBlockMainContainter {
-    display: inline-flex;
+    position: relative;
+    height: 100%;
     width: 100%;
-  }
+    overflow: scroll;
 
-  #ModelDisplayBlockUL {
-    display: flex;
-    list-style-type: none;
-    align-items: center;
+    display: inline-block;
 
-    .ModelDisplayBlockImage {
-      padding-right: 50px;
-      padding-left: 50px;
-      height: 250px;
-      width: 300px;
+    // ModelDisplayBlock.js component - Child Component of TDModelsBody.js - Located in Components Folder.
+    .ModelDisplayBlockMainContainter {
+      display: inline-flex;
+      width: 100%;
+      height: 100%;
     }
 
-    .ModelDisplayBlockButton {
-      background-color: $color3;
-      font-size: 50px;
-      text-align: center;
-      color: black;
-      border-color: #00a8d6;
-      border-radius: 20%;
+    #ModelDisplayBlockUL {
+      padding-left: 5%;
 
-      height: 100px;
-      width: 200px;
-      margin: auto;
-    }
+      display: flex;
+      list-style-type: none;
+      align-items: center;
 
-    .ModelDisplayBlockTextContainer {
-      padding-left: 80px;
-
-      .ModelDisplayBlockTitle {
-        color: #fcfcd4;
+      .ModelDisplayBlockImageLI {
+        padding-right: 0%;
+        padding-left: 0%;
+        .ModelDisplayBlockImage {
+          height: 50%;
+          width: 80%;
+        }
       }
-      .ModelDisplayBlockDescription {
-        color: #fcfcd4;
+
+      .ModelDisplayButtonLI {
+        height: 100%;
+        width: 100%;
+
+        .ModelDisplayBlockButton {
+          background-color: $color3;
+          font-size: 5%;
+          text-align: center;
+          color: black;
+          border-color: #00a8d6;
+          border-radius: 20%;
+          height: 100%;
+          width: 100%;
+        }
+      }
+
+      .ModelDisplayBlockTextContainer {
+        padding-left: 10%;
+
+        .ModelDisplayBlockTitle {
+          color: #fcfcd4;
+        }
+        .ModelDisplayBlockDescription {
+          color: #fcfcd4;
+        }
       }
     }
   }
