--- a/src/SassFiles/main.scss
+++ b/src/SassFiles/main.scss
@@ -1,39 +1,303 @@
-@import 'header';
-@import 'navbar';
-@import 'body';
-@import 'animation';
-@import 'footer';
-@import 'backgroundAnimation';
+@import "header";
+@import "navbar";
+@import "body";
+@import "footer";
+
+@import "hoverAnimations";
 
 $color1: #4cd7f4;
 $color2: #00a8d6;
 $color3: #e2feff;
 $color4: #fcfcd4;
 
-// This file serves as a Central import located for all SCSS files as well as the CSS generator file 
+// This file serves as a Central import located for all SCSS files as well as the CSS generator file
 // used with the --watch command provided by SASS.
 
 // Also serves as some default values.
 
-
-$picsize: 50px;
-
 * {
-    padding: 0;
-    margin: 0%;
-    
+  padding: 0;
+  margin: 0%;
+}
+
+//Responsive Alterations
+
+// Small to Medium size.
+@media screen  and (min-width: 500px){
+  $maxWidth: 1000px;
+  
+}
+
+//Tablet
+@media only screen and (min-width: 1000px) {
+  $maxWidth: 2000px;
+  $maxHeight: 1000px;
+  $picsize: 80px;
+  $shadowSize: 50px;
+
+  // Header Section
+  #MainHeader {
+    max-width: $maxWidth;
+    max-height: 80px;
+    #MainTitle {
+      #MainHeaderTitle {
+        color: red; // Check for ScreenSize
+        font-size: 400%;
+      }
+    }
+
+    .Socials {
+      .pictureWindow {
+        height: $picsize;
+        width: $picsize;
+      }
+      .pictureLogo {
+        height: $picsize;
+        width: $picsize;
+      }
+      .midDrop {
+        height: $shadowSize;
+        width: $shadowSize;
+      }
+      .backDrop {
+        height: $shadowSize;
+        width: $shadowSize;
+      }
+    }
   }
-  .App {
+
+  // Nav Bar / Body Section
+  #NavBodyDiv {
+    max-width: $maxWidth;
+    max-height: 500px;
+    padding-top: 10%;
+    #NavBarContainer {
+      max-width: $maxWidth;
+      height: 100%;
+      width: 10%;
+      // Nav Buttons
+      .NavButtonsList {
+        padding-top: 6%;
+        .NavButtons {
+          height: 50px;
+          width: 200px;
+          
+        }
+      }
+    }
+  }
+  // Body Section -  Default Values.
+  body {
+    height: 100%;
+    width: 80%;
+    max-width: $maxWidth;
+    max-height: $maxHeight;
     h1 {
-      font-size: 40px;
-      color:#fcfcd4;
+      font-size: 200%;
     }
-    p{
-      color:#fcfcd4;
+  }
+  // Body Section
+  .MainBody {
+    width: 80%;
+    height: 100%;
+  }
+
+  // Home Body Section
+  #MainBody-Home {
+    h1 {
+      color: red; // Will Need later.
+    }
+  }
+  // AboutMe Body Section
+
+  #MainBody-AboutMe {
+    height: 100%;
+    width: 80%;
+    h1 {
+      font: 200%;
+    }
+
+    .ListTestingGallery {
+      // Figure out how to get Pictures next to Text
+    }
+    .ListTestingDivider {
+      height: 100%;
+      width: 100%;
+    }
+    .aboutMePic {
+      height: 30%;
+      width: 60%;
+    }
+    .aboutMeText {
+      font-size: 100%;
+      height: 100%;
+      width: 50%;
     }
   }
 
+  //Game Body Section
+
+  .GameBodyMainContainer {
+    // Scrolling Elements.
+    height: 100%;
+    width: 105%;
+    #GameBodyClass-containerElement {
+      height: 100%;
+
+      // GameDisplayBlock.js Components located in the Component Folder.
+      .GameDisplayBlockMainContainer {
+        height: 80%;
+        .GameDisplayBlockImage {
+          height: 100%;
+          width: 100%;
+        }
+
+        .GameDisplayBlockTitle {
+          font-size: 120%;
+        }
+        .GameDisplayBlockDescription {
+          font-size: 80%;
+        }
+        .GameDisplayBlockLI {
+          height: 100%;
+          .GameDisplayBlockButton {
+            height: 30px;
+            width: 100%;
+          }
+        }
+      }
+    }
+  }
+
+  //Photo Body Section
+  #MainBody-Photos {
+    h1 {
+      font-size: 200%;
+    }
+
+    // Page Scroll Element.
+    #PhotoBodyClass-containerElement {
+      height: 183%;
+      width: 80%;
+      padding-bottom: 5%;
+    }
+    #PhotoBodyCarouselContainerScrollElement {
+      width: 95%;
+      height: 33%;
+      padding-bottom: 5%;
+      
+    }
+
+    // Carousel Component - Top of PhotoBody.js
+    .PhotoBodyCarouselPicture {
+      width: 100%;
+    }
 
 
+    // PhotoDisplayBlock.js component - Child Component of PhotosBody.js - Located in Components Folder.
+    .DisplayBlockMainContainer {
+      margin-right: 0px;
+      .DisplayBlockChildContainer {
+        margin-inline: 2.5%;
+        .DisplayBlockTitle {
+          font-size: 200%;
+        }
+        .DisplayBlockImage {
+          width: 80%;
+          height: 100%;
+        }
+        .DisplayBlockButton {
+          width: 50%;
+        }
+      }
+    }
+  }
+  // TDModel body Section
+  #MainBody-3DModels {
+    width: 83%;
+    height: 100%;
+    #ModelBodyClass-containerElement {
+      width: 100%;
+      height: 168%;
 
+      // ModelDisplayBlock.js component - Child Component of TDModelsBody.js - Located in Components Folder.
+      .ModelDisplayBlockMainContainter {
+        width: 100%;
+        height: 100%;
+      }
 
+      #ModelDisplayBlockUL {
+        .ModelDisplayBlockImageLI {
+          height: 80%;
+          width: 30%;
+
+          .ModelDisplayBlockImage {
+            height: 80%;
+            width: 100%;
+          }
+        }
+
+        .ModelDisplayButtonLI { // Need to Figure out Buttons.
+          width: 400%;
+          height: 400%;
+
+          .ModelDisplayBlockButton {
+            width: 400%;
+            height: 400%;
+
+          }
+        }
+      }
+    }
+  }
+
+  // Footer Section
+  #Footer {
+    max-width: $maxWidth;
+    max-height: $maxHeight;
+    width: 100%;
+    height: 6.8%;
+    h1 {
+      font-size: 200%;
+    }
+    #FooterUL {
+      .FooterItems {
+        ul {
+          li {
+            h2 {
+              font-size: 100%;
+            }
+            h3 {
+              font-size: 100%;
+            }
+          }
+        }
+      }
+    }
+    #SocialList {
+
+      .Socials {
+        .pictureWindow {
+          height: $picsize;
+          width: $picsize;
+        }
+        .pictureLogo {
+          height: $picsize;
+          width: $picsize;
+        }
+        .midDrop {
+          height: $shadowSize;
+          width: $shadowSize;
+        }
+        .backDrop {
+          height: $shadowSize;
+          width: $shadowSize;
+        }
+      }
+    }
+  }
+}
+
+//Desktop
+@media only screen and (min-width: 2000px) {
+}
