--- a/src/SassFiles/body.scss
+++ b/src/SassFiles/body.scss
@@ -3,11 +3,6 @@ $color2: #00a8d6;
 $color3: #e2feff;
 $color4: #fcfcd4;
 
-$minWidth: 290px;
-$maxWidth: 500px;
-$maxHeight: 740px;
-
-
 // This file serves as the styling for many different Body Components located in the
 // src/LayoutComponents/BodyComponents Folder.
 
@@ -18,14 +13,11 @@ body {
   background-color: $color2;
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
-  height: 100%;
-  width: 80%;
   max-width: $maxWidth;
   max-height: $maxHeight;
 
   margin-trim: 100%;
   h1 {
-    font-size: 15px;
     color: #fcfcd4;
   }
   p {
@@ -34,29 +26,23 @@ body {
 }
 
 .MainBody {
-  padding-left: 17%;
+  padding-left: 25%;
   padding-bottom: 0%;
-  top: 15%;
+  top: 7%;
   position: absolute;
   float: right;
   z-index: -1;
-  width: 100%;
-  height: 100%;
   list-style-type: none;
 }
 
 // Home Body Section. HomeBody.js Component.
 #MainBody-Home {
-  width: 80%;
-  height: 3000px;
   h1{
     padding-left: 10%;
   }
 }
 // AboutMe Body Section. AboutMeBody.js Component
 #MainBody-AboutMe {
-  height: 100%;
-  width: 90%;
   h1{
     padding-left: 5%;
   }
@@ -72,22 +58,15 @@ body {
     backdrop-filter: blur(5.1px);
     border-radius: 15px;
     -webkit-backdrop-filter: blur(5.1px);
-    height: 100%;
-    width: 100%;
   }
   .aboutMePic {
     list-style-type: none;
-    height: 100%;
-    width: 100%;
     margin: 0;
     padding: 0;
   }
   .aboutMeText {
     list-style-type: none;
     color: $color4;
-    font-size: 50%;
-    height: 100%;
-    width: 50%;
     line-height: 0.1px;
   }
 }
@@ -95,8 +74,6 @@ body {
 // Games Body Section - GamesBody.js Component.
 
 .GameBodyMainContainer {
-  width: 90%;
-  height: 100%;
   display: block;
   h1{
     padding-left: 5%;
@@ -106,22 +83,16 @@ body {
   #GameBodyClass-containerElement {
     position: relative;
 
-    width: 100%;
-    height: 100%;
     overflow: scroll;
 
     .GameBodyUL {
-      width: 100%;
-      height: 100%;
       list-style-type: none;
 
-      padding-bottom: 5%;
+      padding-bottom: 0%;
 
       display: inline-flex;
 
       .GameBodyLI {
-        height: 100%;
-        width: 100%;
         padding-top: 1%;
         padding-bottom: 1%;
         padding-left: 1%;
@@ -132,8 +103,6 @@ body {
     .GameDisplayBlockMainContainer {
       list-style-type: none;
       position: relative;
-      height: 100%;
-      width: 80%;
       border: 0%;
 
       padding-top: 10%;
@@ -147,29 +116,21 @@ body {
       border-radius: 15px;
       -webkit-backdrop-filter: blur(5.1px);
 
-      .GameDisplayBlockImage {
-        height: 70%;
-        width: 100%;
-      }
 
       .GameDisplayBlockTitle {
-        font-size: 5%;
         padding-left: 5%;
+        padding-top: 30%;
       }
       .GameDisplayBlockDescription {
-        font-size: 5%;
         padding-left: 5%;
       }
       .GameDisplayBlockButton {
         background-color: $color3;
-        font-size: 5%;
         text-align: center;
         color: black;
         border-color: #00a8d6;
         border-radius: 20%;
 
-        height: 100%;
-        width: 100%;
         margin: auto;
 
         text-align: center;
@@ -184,59 +145,40 @@ body {
 // Photos Body Section - PhotosBody.js component.
 #MainBody-Photos {
   display: inline-block;
-  height:$maxHeight;
-  width: $maxWidth;
   margin: 0%;
-  height: 100%;
-  width: 100%;
 
   h1 {
-    font-size: 60%;
     padding-left:5%;
   }
 
   // Page Scroll Element.
   #PhotoBodyClass-containerElement {
     position: relative;
-    height:100%;
-    width:80%;
     overflow: scroll;
     padding-left: 0%;
     margin:0px;
   }
   #PhotoBodyCarouselContainerScrollElement{
-    height:20%;
-    width:90%;
     padding-left:5%;
   }
 
   // Carousel Component - Top of PhotoBody.js
   #PhotoBodyCarouselContainer {
     margin-bottom: 100%;
-    width:100%;
-    height:100%;
   }
 
-  .PhotoBodyCarouselPicture {
-    height: 60%;
-    width: 80%;
-  }
   .ScrollElementDiv{
     padding-left:10%;
-    width:100%;
   }
 
   // Start of Photo Object List.
   .PhotoUL {
     list-style-type: none;
-    height: 80%;
-    width: 100%;
     margin-right:0%;
     padding-top: 2%;
 
 
     .PhotoLI{
-      width:120%;
       position:relative;
       
     }
@@ -244,8 +186,6 @@ body {
 
 // PhotoDisplayBlock.js component - Child Component of PhotosBody.js - Located in Components Folder.
   .DisplayBlockMainContainer {
-    height: 100%;
-    width: 60%;
     position:relative;
 
     
@@ -255,31 +195,22 @@ body {
       backdrop-filter: blur(5.1px);
       border-radius: 20%;
       -webkit-backdrop-filter: blur(5.1px);
-      height: 80%;
-      width: 45%;
       display:inline-block;
       margin-inline: 2%;
 
       .DisplayBlockTitle {
         color: #fcfcd4;
-        font-size: 100%;
         text-align: center;
       }
       .DisplayBlockImage {
         padding-right: 10%;
         padding-left: 10%;
-        height: 60%;
-        width: 80%;
       }
       .DisplayBlockButton {
         background-color: $color3;
-        font-size: 55%;
         color: black;
         border-color: #00a8d6;
         border-radius: 20%;
-
-        height: 20%;
-        width: 50%;
         display: grid;
         margin: auto;
       }
@@ -289,8 +220,6 @@ body {
 
 // TDModels Body Section - TDModelsBody.js Component.
 #MainBody-3DModels {
-  height: $maxHeight;
-  width: 80%;
 
   #ModelBodyClass-containerElement {
     h1 {
@@ -298,8 +227,6 @@ body {
     }
 
     position: relative;
-    height: 100%;
-    width: 100%;
     overflow: scroll;
 
     display: inline-block;
@@ -307,12 +234,11 @@ body {
     // ModelDisplayBlock.js component - Child Component of TDModelsBody.js - Located in Components Folder.
     .ModelDisplayBlockMainContainter {
       display: inline-flex;
-      width: 100%;
-      height: 100%;
     }
 
     #ModelDisplayBlockUL {
       padding-left: 5%;
+      margin-top: 5%;
 
       display: flex;
       list-style-type: none;
@@ -321,15 +247,10 @@ body {
       .ModelDisplayBlockImageLI {
         padding-right: 0%;
         padding-left: 0%;
-        .ModelDisplayBlockImage {
-          height: 50%;
-          width: 80%;
-        }
+
       }
 
       .ModelDisplayButtonLI {
-        height: 100%;
-        width: 100%;
 
         .ModelDisplayBlockButton {
           background-color: $color3;
@@ -338,8 +259,6 @@ body {
           color: black;
           border-color: #00a8d6;
           border-radius: 20%;
-          height: 100%;
-          width: 100%;
         }
       }
 
