--- a/src/SassFiles/main.css
+++ b/src/SassFiles/main.css
@@ -394,7 +394,8 @@ body p {
 
 /*Responsive Layouts for multiple Device size such as Mobiles -> Ultra Wide Screens.
 Located in Sub Folder of SassFiles.
-Title Changes Color Based on which Responce is Active. 
+
+Top Left Header Title Changes Color Based on which Responce is Active. **Only during Development**
 Blue : small 290 - 500
 Purple : med 500 - 1000
 Red : large 1000 - 2000
@@ -921,6 +922,8 @@ Aimed at Large Devices such as Latops upto Desktop Computers.
   .GameBodyMainContainer {
     height: 100%;
     width: 95%;
+    max-width: 2000px;
+    max-height: 1000px;
   }
   .GameBodyMainContainer #GameBodyClass-containerElement {
     height: 73%;
@@ -973,7 +976,8 @@ Aimed at Large Devices such as Latops upto Desktop Computers.
   }
   #MainBody-Photos #PhotoBodyCarouselContainerScrollElement {
     width: 95%;
-    height: 50%;
+    height: 70%;
+    max-height: 100%;
     padding-bottom: 5%;
   }
   #MainBody-Photos .PhotoBodyCarouselPicture {
